--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "^4.0.0-alpha.6",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
+    "json-query": "^2.2.2",
+    "json-sql": "^0.3.11",
     "mongodb": "^2.2.35",
     "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
