--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "hashmap": "^2.3.0",
     "json-query": "^2.2.2",
     "json-sql": "^0.3.11",
     "mongodb": "^2.2.35",
